# qsubpy

./: .gitignore  LICENSE  README.md  config.toml  example_settings.yml  setup.cfg  sge_config.yml
qsubpy/: cli.py  config.py  generate_yaml.py  qsub.py  run.py  sync_qsub.py  templates.py  utils.py  validator.py
test/: barcodes.tsv  config.toml  sge_out.txt  sge_out_array.txt  test_config.py  test_qsub.py
~/.config/: qsubpy_config.toml
