[metadata]
name = qsubpy
description = "Utility for qsub of UGE"
long_description = file: README.md
version = dev
author = illumination-k
author_email = illumination.k.27@gmail.com
url=https://github.com/illumination-k/qsubpy
license = MIT


[options]
install_requires =
    PyYaml>=3.12

[options.entry_points]
    console_scripts =
        qsubpy = qsubpy.cli:__main__

[options.packages.find]
exclude =
    tests
    docs
    containers

[options.extras_require]
dev =
    sphinx
test =
    pytest
    setuptools>=36.4.0